[package]
name = "nsqueue"
version = "0.1.5"
authors = ["Flavio Oliveira <rusty@wisespace.io>"]

description = "Rust client for the NSQ realtime message processing system"
license = "MIT OR Apache-2.0"
keywords = ["nsq", "queue", "tokio", "asynchronous"]
categories = ["caching"]
repository = "https://github.com/wisespace-io/nsqueue"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/nsqueue" }

[lib]
name = "nsqueue"
path = "src/lib.rs"

[dependencies]
log = "^0.3"
bytes = "^0.4"
futures = "^0.1"
tokio-io = "^0.1"
tokio-core = "^0.1"
tokio-proto = "^0.1"
tokio-service = "^0.1"
byteorder = "1.0.0"
hostname = "^0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
